# nemo-rs

./: Cargo.toml  README.md  README.org
src/: completion.rs  embeddings.rs  lib.rs  models.rs  steerlm.rs  utils.rs
